# calculator_calories_fastapi

./: .flake8  Dockerfile  README.md  check_connect.py  docker-compose.yml  pyproject.toml  start_my_db.py
alembic/: env.py
alembic/versions/: 3b9363bb3950_init_migration.py  893f4bb1a82b_update_day.py  cbf116359df3_update_meal.py
app/: db_data.py  main.py  prestart.py  pyproject.toml  schemas.py  schemas_temp.py
app/alembic/: env.py
app/alembic/versions/: 962f7f844218_update_day_add_daily_calories.py  cb9f6be55db5_date_unique.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: day.py  meal.py
app/app/api/api_v1/endpoints/: day.py
app/app/core/: config.py
app/app/crud/: crud_day.py
app/app/db/: session.py
app/app/models/: meal.py  user.py
app/app/schemas/: meal.py
app/core/: config.py
app/crud/: crud_meal.py
app/db/: base.py  init_db.py  session.py
app/models/: day.py  meal.py  user.py
app/schemas/: day.py  meal.py
src/: main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: __init__.py  day.py  meal.py
src/config/: config.py
src/core/crud/: __init__.py  base.py  crud_day.py  crud_meal.py
src/core/db/: base.py  session.py
src/core/models/: __init__.py  day.py  meal.py
src/core/repository/: __init__.py  day_meal.py
src/core/schemas/: __init__.py  day.py  meal.py
