[tool.poetry]
name = "app"
version = "0.0.1"
description = "Calculator of calories on FastAPI"
authors = ["EscapeFromHell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.18.3"
fastapi = "0.82.0"
python-multipart = "~0.0.5"
pydantic = "1.10.2"
SQLAlchemy = "1.4.40"
alembic = "1.8.1"
tenacity = "^8.0.1"
greenlet = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
