[tool.poetry]
name = "app"
version = "0.0.1"
description = "Calories calculator (FastAPI)"
authors = ["EscapeFromHell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
fastapi = ">=0.85.0"
uvicorn = ">=0.18.3"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
pandas = "^1.5.1"
httpx = ">=0.23.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
asgi-lifespan = "^2.0.0"
setuptools = "^65.3.0"

# git hooks
pre-commit = "^2.20.0"
# formatters
isort = ">=5.9.3"
black = ">=22.1.0"
# dead code analisys
vulture = ">=2.3"
# linter
flake8 = ">=3.9.2"
pep8-naming = ">=0.12.1"
flake8-broken-line = ">=0.3.0"
flake8-bugbear = ">=21.9.1"
flake8-builtins = ">=1.5.3"
flake8-coding = ">=1.3.2"
flake8-comprehensions = ">=3.6.1"
flake8-debugger = ">=4.0.0"
flake8-eradicate = ">=1.1.0"
flake8-logging-format = ">=0.6.0"
flake8-pep3101 = ">=1.3.0"
flake8-print = ">=4.0.0"
flake8-pytest-style = ">=1.5.0"
flake8-string-format = ">=0.3.0"
flake8-variables-names = ">=0.0.4"
flake8-expression-complexity = ">=0.0.9"
flake8-cognitive-complexity = ">=0.1.0"
flake8-annotations = ">=2.6.2"
flake8-noqa = ">=1.1.0"
flake8-docstrings = ">=1.6.0"
flake8-unused-arguments = ">=0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.pytest_cache          # root of the project
    | \.idea
    | \__pycache__
    | \.venv
    | alembic
    | env
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
skip = [".git", ".pytest_cache", ".idea", "__pycache__", ".venv", "alembic", "env", "venv"]

[tool.pylint.messages_control]
disable = ["import-error"]

[tool.pytest.ini_options]
# Also see
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# https://pytest-cov.readthedocs.io/en/latest/config.html
# If you want to see console output from tests, include -s flag
addopts = [
    '--cov-fail-under=60',
    '--cov-report=html:pytest',
    '--cov-report=term-missing',
    '--junitxml=report.xml'
]